# binify

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md
.github/workflows/: release.yml
cmake/: CompilerOptions.cmake  Dependencies.cmake
installer/: binify.iss  license.txt
resources/: app.manifest  binify.rc  resource.h
resources/lang/: en-US.json  zh-CN.json
src/: main.cpp
src/app/: add_command_creation.cpp  add_command_workflow.cpp  add_command_workflow.h  application.cpp  application.h  bin_entries.cpp  bin_entries.h  config_store.h  context_menu_service.h  entry_transaction.cpp  entry_transaction.h  link_service.h  logger.h  path_service.h  settings_workflow.cpp  settings_workflow.h  shell_service.h  uninstall_workflow.cpp  uninstall_workflow.h
src/core/: bat_wrapper.cpp  bat_wrapper.h  command_conflict.cpp  command_conflict.h  command_name.cpp  command_name.h  config.cpp  config.h  context_menu_command.cpp  context_menu_command.h  creation_policy.cpp  creation_policy.h  error.cpp  error.h  language_pack.cpp  language_pack.h  path_utils.cpp  path_utils.h  path_value.cpp  path_value.h  result.h  text_encoding.cpp  text_encoding.h
src/platform/windows/: config_store.cpp  config_store.h  context_menu_service.cpp  context_menu_service.h  environment_broadcast.cpp  environment_broadcast.h  file_logger.cpp  file_logger.h  link_service.cpp  link_service.h  path_service.cpp  path_service.h  platform.cpp  platform.h  shell_service.cpp  shell_service.h
src/ui/: add_command_dialog.cpp  add_command_dialog.h  conflict_dialog.cpp  conflict_dialog.h  result_dialog.cpp  result_dialog.h  settings_dialog.cpp  settings_dialog.h  ui_application.cpp  ui_application.h  ui_runtime.cpp  ui_runtime.h  ui_text.h  ui_theme.cpp  ui_theme.h  uninstall_dialog.cpp  uninstall_dialog.h
tests/integration/: config_store_tests.cpp  context_menu_service_tests.cpp  file_logger_tests.cpp  link_service_tests.cpp  path_service_tests.cpp  shell_service_tests.cpp  smoke_tests.cpp
tests/unit/: add_command_creation_tests.cpp  add_command_workflow_tests.cpp  bat_wrapper_tests.cpp  bin_entries_tests.cpp  command_conflict_tests.cpp  command_name_tests.cpp  config_model_tests.cpp  config_serialization_tests.cpp  context_menu_command_tests.cpp  creation_policy_tests.cpp  entry_transaction_tests.cpp  error_tests.cpp  language_pack_tests.cpp  path_utils_tests.cpp  path_value_tests.cpp  result_tests.cpp  settings_workflow_tests.cpp  smoke_tests.cpp  text_encoding_tests.cpp  uninstall_workflow_tests.cpp
